fix: wrap buttons later in mobile popups

--- a/sass/popup.module.sass
+++ b/sass/popup.module.sass
@@ -108,7 +108,7 @@ div.popup
                 gap: 10px
                 justify-content: center
                 margin-bottom: 10px
-                @media (max-width: 400px)
+                @media (max-width: 330px)
                     flex-direction: column-reverse
                     gap: 8px
             & button
@@ -126,7 +126,7 @@ div.popup
                 border: 0
                 cursor: pointer
                 transition: background-color .15s linear
-                @media (max-width: 400px)
+                @media (max-width: 330px)
                     width: 100%
                     justify-content: center
                 &:not(:first-child)
